--- a/Bazaar Ghar/StoryBoards/Base.lproj/Main.storyboard
+++ b/Bazaar Ghar/StoryBoards/Base.lproj/Main.storyboard
@@ -3666,7 +3666,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="365" height="8000"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="heN-Ks-b3p">
-                                                <rect key="frame" x="0.0" y="5" width="365" height="45"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="365" height="45"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ck5-lW-KH6">
                                                         <rect key="frame" x="37" y="2.6666666666666714" width="40" height="40"/>
@@ -3692,7 +3692,7 @@
                                                 </constraints>
                                             </view>
                                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DnH-L6-kIh" customClass="FSPagerView" customModule="FSPagerView">
-                                                <rect key="frame" x="18.666666666666657" y="68" width="327.66666666666674" height="170"/>
+                                                <rect key="frame" x="18.666666666666657" y="63" width="327.66666666666674" height="170"/>
                                                 <subviews>
                                                     <collectionView hidden="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="th7-HP-KWO">
                                                         <rect key="frame" x="0.0" y="0.0" width="327.66666666666669" height="170"/>
@@ -3727,27 +3727,27 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="32i-7n-qSv" customClass="FSPageControl" customModule="FSPagerView">
-                                                <rect key="frame" x="18.666666666666657" y="198" width="327.66666666666674" height="40"/>
+                                                <rect key="frame" x="18.666666666666657" y="193" width="327.66666666666674" height="40"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="rrZ-wQ-WgJ"/>
                                                 </constraints>
                                             </view>
                                             <pageControl hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="EIo-GP-cTn">
-                                                <rect key="frame" x="82.666666666666686" y="238" width="200" height="30"/>
+                                                <rect key="frame" x="82.666666666666686" y="233" width="200" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="200" id="exG-y5-2H0"/>
                                                     <constraint firstAttribute="height" constant="30" id="fCW-ka-vcV"/>
                                                 </constraints>
                                             </pageControl>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wat-Dk-aN4">
-                                                <rect key="frame" x="20" y="255.33333333333329" width="43" height="22.666666666666657"/>
+                                                <rect key="frame" x="20" y="250.33333333333329" width="43" height="22.666666666666657"/>
                                                 <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="16"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mg2-aM-GCe">
-                                                <rect key="frame" x="320" y="254.33333333333331" width="25" height="25"/>
+                                                <rect key="frame" x="320" y="249.33333333333331" width="25" height="25"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="25" id="Ggk-rM-hi5"/>
                                                     <constraint firstAttribute="height" constant="25" id="Ioo-oQ-H0v"/>
@@ -3759,7 +3759,7 @@
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QPs-uY-7t7">
-                                                <rect key="frame" x="0.0" y="288" width="365" height="120"/>
+                                                <rect key="frame" x="0.0" y="283" width="365" height="120"/>
                                                 <subviews>
                                                     <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TOP CATEGORIES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dfh-ps-jjG">
                                                         <rect key="frame" x="104.33333333333333" y="0.0" width="156.66666666666669" height="20"/>
@@ -3865,7 +3865,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lqw-Kv-75q">
-                                                <rect key="frame" x="0.0" y="408" width="365" height="620"/>
+                                                <rect key="frame" x="0.0" y="403" width="365" height="620"/>
                                                 <subviews>
                                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zBO-OU-DTL">
                                                         <rect key="frame" x="0.0" y="3" width="365" height="40"/>
@@ -3952,7 +3952,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PVk-G0-v7d">
-                                                <rect key="frame" x="0.0" y="1028" width="365" height="300"/>
+                                                <rect key="frame" x="0.0" y="1023" width="365" height="300"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ZB-Lt-vZ4">
                                                         <rect key="frame" x="0.0" y="0.0" width="365" height="30"/>
@@ -4117,7 +4117,7 @@
                                                 </constraints>
                                             </view>
                                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VnZ-uI-9Kq">
-                                                <rect key="frame" x="0.0" y="1328" width="365" height="0.0"/>
+                                                <rect key="frame" x="0.0" y="1323" width="365" height="0.0"/>
                                                 <subviews>
                                                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nx3-fw-SHh">
                                                         <rect key="frame" x="0.0" y="3" width="365" height="0.0"/>
@@ -4208,7 +4208,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BUe-WV-rA5">
-                                                <rect key="frame" x="0.0" y="1328" width="365" height="300"/>
+                                                <rect key="frame" x="0.0" y="1323" width="365" height="300"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bWd-mu-HuA">
                                                         <rect key="frame" x="0.0" y="0.0" width="365" height="42.333333333333336"/>
@@ -4513,7 +4513,7 @@
                                                 </constraints>
                                             </view>
                                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dgg-km-TQm">
-                                                <rect key="frame" x="0.0" y="1638" width="365" height="3000"/>
+                                                <rect key="frame" x="0.0" y="1633" width="365" height="3000"/>
                                                 <subviews>
                                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="STd-tZ-JtT">
                                                         <rect key="frame" x="0.0" y="0.0" width="365" height="3000"/>
@@ -4782,7 +4782,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IaX-aa-6tB">
-                                                <rect key="frame" x="0.0" y="4638" width="365" height="40"/>
+                                                <rect key="frame" x="0.0" y="4633" width="365" height="40"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trending Product" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4PN-gh-b2I">
                                                         <rect key="frame" x="15" y="10.000000000000002" width="136" height="22.666666666666671"/>
@@ -4812,10 +4812,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n5F-fT-JZl">
-                                                <rect key="frame" x="0.0" y="4678" width="365" height="3322"/>
+                                                <rect key="frame" x="0.0" y="4673" width="365" height="3327"/>
                                                 <subviews>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SQe-DJ-K6N">
-                                                        <rect key="frame" x="0.0" y="0.0" width="365" height="3322"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="365" height="3327"/>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="iwr-4k-kfa">
                                                             <size key="itemSize" width="128" height="128"/>
@@ -4848,7 +4848,7 @@
                                             <constraint firstItem="EIo-GP-cTn" firstAttribute="top" secondItem="DnH-L6-kIh" secondAttribute="bottom" id="2Qz-Oy-b8B"/>
                                             <constraint firstAttribute="trailing" secondItem="n5F-fT-JZl" secondAttribute="trailing" id="4Hr-FT-Nvz"/>
                                             <constraint firstAttribute="trailing" secondItem="BUe-WV-rA5" secondAttribute="trailing" id="4cq-w8-xRA"/>
-                                            <constraint firstItem="heN-Ks-b3p" firstAttribute="top" secondItem="YQ0-dC-BVM" secondAttribute="top" constant="5" id="4oY-EL-Q7o"/>
+                                            <constraint firstItem="heN-Ks-b3p" firstAttribute="top" secondItem="YQ0-dC-BVM" secondAttribute="top" id="4oY-EL-Q7o"/>
                                             <constraint firstItem="PVk-G0-v7d" firstAttribute="top" secondItem="lqw-Kv-75q" secondAttribute="bottom" id="5CI-XS-mcV"/>
                                             <constraint firstItem="dgg-km-TQm" firstAttribute="top" secondItem="BUe-WV-rA5" secondAttribute="bottom" constant="10" id="Bnd-01-cjB"/>
                                             <constraint firstItem="IaX-aa-6tB" firstAttribute="top" secondItem="dgg-km-TQm" secondAttribute="bottom" id="CRR-kO-kPU"/>
