--- a/Bazaar Ghar/StoryBoards/Base.lproj/SearchStoryBoard.storyboard
+++ b/Bazaar Ghar/StoryBoards/Base.lproj/SearchStoryBoard.storyboard
@@ -572,7 +572,7 @@
                                                                                             <rect key="frame" x="0.0" y="0.0" width="353" height="37"/>
                                                                                             <subviews>
                                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Automotive" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4nV-aU-x90">
-                                                                                                    <rect key="frame" x="37.000000000000007" y="7.3333333333333339" width="91.666666666666686" height="22.666666666666664"/>
+                                                                                                    <rect key="frame" x="31" y="7.3333333333333339" width="262" height="22.666666666666664"/>
                                                                                                     <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="16"/>
                                                                                                     <nil key="textColor"/>
                                                                                                     <nil key="highlightedColor"/>
@@ -584,7 +584,7 @@
                                                                                                         <constraint firstAttribute="height" constant="19" id="Hb6-nD-zNq"/>
                                                                                                     </constraints>
                                                                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                                                                    <state key="normal" image="unslectedChkBox"/>
+                                                                                                    <state key="normal" image="radioBlue"/>
                                                                                                     <state key="selected" image="radio-button-svgrepo-com"/>
                                                                                                 </button>
                                                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="udT-Hg-FsD">
@@ -615,11 +615,12 @@
                                                                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                                             <constraints>
                                                                                                 <constraint firstAttribute="trailing" secondItem="udT-Hg-FsD" secondAttribute="trailing" constant="10" id="4EA-vQ-rSp"/>
+                                                                                                <constraint firstItem="4nV-aU-x90" firstAttribute="centerY" secondItem="lVK-WC-dk9" secondAttribute="centerY" id="5mn-Yk-jH9"/>
                                                                                                 <constraint firstItem="udT-Hg-FsD" firstAttribute="top" secondItem="lVK-WC-dk9" secondAttribute="top" constant="4.6666666666666643" id="Kcv-fW-uIc"/>
                                                                                                 <constraint firstItem="ZT6-2q-pUh" firstAttribute="leading" secondItem="lVK-WC-dk9" secondAttribute="leading" constant="2" id="Ll0-BX-SQT"/>
                                                                                                 <constraint firstItem="ZT6-2q-pUh" firstAttribute="centerY" secondItem="lVK-WC-dk9" secondAttribute="centerY" id="Neo-Gl-Frg"/>
-                                                                                                <constraint firstItem="4nV-aU-x90" firstAttribute="centerY" secondItem="ZT6-2q-pUh" secondAttribute="centerY" id="h2r-st-LED"/>
-                                                                                                <constraint firstItem="4nV-aU-x90" firstAttribute="leading" secondItem="ZT6-2q-pUh" secondAttribute="trailing" constant="16" id="zcG-7d-jGX"/>
+                                                                                                <constraint firstItem="4nV-aU-x90" firstAttribute="trailing" secondItem="udT-Hg-FsD" secondAttribute="trailing" constant="-50" id="Wwp-BU-igp"/>
+                                                                                                <constraint firstItem="4nV-aU-x90" firstAttribute="leading" secondItem="ZT6-2q-pUh" secondAttribute="trailing" constant="10" id="xqh-ma-au5"/>
                                                                                             </constraints>
                                                                                         </view>
                                                                                     </subviews>
@@ -765,8 +766,8 @@
                                                                                             <rect key="frame" x="0.0" y="0.0" width="353" height="37"/>
                                                                                             <subviews>
                                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Automotive" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nPy-b9-rad">
-                                                                                                    <rect key="frame" x="37" y="7.3333333333333339" width="94" height="22.666666666666664"/>
-                                                                                                    <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="16"/>
+                                                                                                    <rect key="frame" x="31" y="7.3333333333333339" width="262" height="22.666666666666664"/>
+                                                                                                    <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="16"/>
                                                                                                     <nil key="textColor"/>
                                                                                                     <nil key="highlightedColor"/>
                                                                                                 </label>
@@ -777,7 +778,7 @@
                                                                                                         <constraint firstAttribute="height" constant="19" id="p2J-KG-PWb"/>
                                                                                                     </constraints>
                                                                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                                                                    <state key="normal" image="unslectedChkBox"/>
+                                                                                                    <state key="normal" image="radioBlue"/>
                                                                                                     <state key="selected" image="radio-button-svgrepo-com"/>
                                                                                                 </button>
                                                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2nc-GJ-BqF">
@@ -808,11 +809,12 @@
                                                                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                                             <constraints>
                                                                                                 <constraint firstItem="SBA-el-phX" firstAttribute="leading" secondItem="HUi-FF-HL0" secondAttribute="leading" constant="2" id="7X2-Jj-SUi"/>
-                                                                                                <constraint firstItem="nPy-b9-rad" firstAttribute="leading" secondItem="SBA-el-phX" secondAttribute="trailing" constant="16" id="Aig-8p-O90"/>
+                                                                                                <constraint firstItem="nPy-b9-rad" firstAttribute="centerY" secondItem="HUi-FF-HL0" secondAttribute="centerY" id="GfM-8B-6qg"/>
+                                                                                                <constraint firstItem="nPy-b9-rad" firstAttribute="trailing" secondItem="2nc-GJ-BqF" secondAttribute="trailing" constant="-50" id="KDo-3i-lRf"/>
                                                                                                 <constraint firstItem="SBA-el-phX" firstAttribute="centerY" secondItem="HUi-FF-HL0" secondAttribute="centerY" id="LPB-6J-zaS"/>
                                                                                                 <constraint firstAttribute="trailing" secondItem="2nc-GJ-BqF" secondAttribute="trailing" constant="10" id="OTM-wM-wWg"/>
+                                                                                                <constraint firstItem="nPy-b9-rad" firstAttribute="leading" secondItem="SBA-el-phX" secondAttribute="trailing" constant="10" id="kQv-Sl-tfG"/>
                                                                                                 <constraint firstItem="2nc-GJ-BqF" firstAttribute="top" secondItem="HUi-FF-HL0" secondAttribute="top" constant="4.6666666666665151" id="v3j-b3-Edw"/>
-                                                                                                <constraint firstItem="nPy-b9-rad" firstAttribute="centerY" secondItem="SBA-el-phX" secondAttribute="centerY" id="ym1-bi-rw2"/>
                                                                                             </constraints>
                                                                                         </view>
                                                                                     </subviews>
@@ -1299,7 +1301,7 @@
                                                                             <rect key="frame" x="0.0" y="0.0" width="69" height="27"/>
                                                                             <subviews>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10% OFF" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OJs-MH-CP0">
-                                                                                    <rect key="frame" x="11.666666666666664" y="5" width="46" height="17"/>
+                                                                                    <rect key="frame" x="11.666666666666664" y="5" width="46.000000000000007" height="17"/>
                                                                                     <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="12"/>
                                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <nil key="highlightedColor"/>
@@ -1489,7 +1491,7 @@
                                         <rect key="frame" x="0.0" y="57.666666666666686" width="393" height="701.33333333333326"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Data Found" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6tx-Zb-Tlo">
-                                                <rect key="frame" x="122.66666666666667" y="336.66666666666663" width="147.66666666666663" height="28"/>
+                                                <rect key="frame" x="122.66666666666667" y="336.66666666666663" width="147.66666666666657" height="28"/>
                                                 <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -1560,8 +1562,8 @@
         <image name="multiply.circle" catalog="system" width="128" height="123"/>
         <image name="online-shopping" width="19" height="18"/>
         <image name="radio-button-svgrepo-com" width="800" height="800"/>
+        <image name="radioBlue" width="512" height="512"/>
         <image name="star-svgrepo-com" width="9" height="9"/>
-        <image name="unslectedChkBox" width="19" height="19"/>
         <namedColor name="FF8319">
             <color red="0.023529411764705882" green="0.71764705882352942" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
